Fix disappearing ag-grid table due to white-space: pre-wrap

--- a/src/styles/_mobileworkspace.scss
+++ b/src/styles/_mobileworkspace.scss
@@ -207,6 +207,10 @@ $shadow-light: rgba(0, 0, 0, 0.2);
         }
       }
     }
+
+    .SourcecastContainer {
+      white-space: normal;
+    }
   }
 
   .mobile-unselected-panel {
